<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/colligo_logo_maroon"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:background="@drawable/edittext_bg"
            android:paddingHorizontal="16dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:background="@drawable/edittext_bg"
            android:paddingHorizontal="16dp"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:backgroundTint="@color/colligo_maroon"
            android:textColor="@color/white"
            android:fontFamily="poppins_semibold" />

        <TextView
            android:id="@+id/registerRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/google_btn_bg"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="10dp"
            android:fontFamily="@font/angkor"
            android:text="@string/continue_with_google"
            android:textColor="@color/black"
            android:textColorHighlight="#00FFFFFF"
            android:textColorHint="#00FFFFFF"
            android:textColorLink="@color/pink_background" />

    </LinearLayout>
</ScrollView>