<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#965060">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/white_app_logo"
            android:src="@drawable/colligo_logo" />

        <ImageView
            android:id="@+id/colligoNameImage"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/maroon_app_name"
            android:src="@drawable/colligo_name" />

        <TextView
            android:id="@+id/taglineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/angkor"
            android:text="@string/navigate_connect_thrive"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button_white"
        android:backgroundTint="#C8B5B5"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:text="@string/get_started"
        android:textColor="@android:color/black"
        android:textColorLink="#00181010"
        android:textSize="18sp"
        app:rippleColor="#877575" />
</FrameLayout>
